data_joedir = $(datadir)/joe

data_syntaxdir = $(data_joedir)/syntax

data_syntax_DATA = \
	4gl.jsf erb.jsf jsf.jsf php.jsf spec.jsf \
	ada.jsf erlang.jsf js.jsf powershell.jsf sql.jsf \
	ant.jsf fortran.jsf json.jsf prolog.jsf tcl.jsf \
	asm.jsf git-commit.jsf lisp.jsf properties.jsf tex.jsf \
	awk.jsf go.jsf lsl.jsf ps.jsf troff.jsf \
	c.jsf haml.jsf lua.jsf puppet.jsf verilog.jsf \
	cobol.jsf haskell.jsf m4.jsf python.jsf vhdl.jsf \
	htmlerb.jsf mail.jsf rexx.jsf whitespace.jsf \
	conf.jsf html.jsf mason.jsf ruby.jsf xml.jsf \
	csh.jsf ini.jsf matlab.jsf sed.jsf yaml.jsf \
	css.jsf iptables.jsf md.jsf sh.jsf \
	debian.jsf java.jsf ocaml.jsf sieve.jsf \
	diff.jsf joerc.jsf pascal.jsf skill.jsf \
	elixir.jsf jsf_check.jsf perl.jsf sml.jsf


EXTRA_DIST = $(data_syntax_DATA)
